aks/manifest/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: orleans-demo
  labels:
    name: orleans-demo
