aks/manifest/booking-admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-admin
  namespace: orleans-demo
  labels:
    app: booking-admin
spec:
  selector:
    matchLabels:
      app: booking-admin
  replicas: 1
  template:
    metadata:
      labels:
        app: booking-admin

        # The serviceId label is used to identify the service to Orleans
        orleans/serviceId: booking-admin

        # The clusterId label is used to identify an instance of a cluster to Orleans.
        # Typically, this will be the same value as serviceId or any fixed value.
        # In cases where you are not using rolling deployments (for example, blue/green deployments),
        # this value can allow for distinct clusters which do not communicate directly with each others,
        # but which still share the same storage and other resources.
        orleans/clusterId: booking

        # Workload identity
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: orleans-demo-sa
      containers:
        - name: main
          image: mbaksacr.azurecr.io/booking.admin:dev
          imagePullPolicy: Always
          ports:
          - containerPort: 11111
          - containerPort: 30000
          - containerPort: 80
      terminationGracePeriodSeconds: 180
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

---
# In order to be able to access the service from outside the cluster, we will need to add a Service object
apiVersion: v1
kind: Service
metadata:
  name: booking-admin
  namespace: orleans-demo
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  selector:
    app: booking-admin
