aks/manifest/booking-silo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-silo
  namespace: orleans-demo
  labels:
    app: booking-silo
spec:
  selector:
    matchLabels:
      app: booking-silo
  replicas: 2
  template:
    metadata:
      labels:
        app: booking-silo

        # The serviceId label is used to identify the service to Orleans
        orleans/serviceId: booking-silo

        # The clusterId label is used to identify an instance of a cluster to Orleans.
        # Typically, this will be the same value as serviceId or any fixed value.
        # In cases where you are not using rolling deployments (for example, blue/green deployments),
        # this value can allow for distinct clusters which do not communicate directly with each others,
        # but which still share the same storage and other resources.
        orleans/clusterId: booking

        # Workload identity
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: orleans-demo-sa
      containers:
        - name: main
          image: mbaksacr.azurecr.io/booking.silo:$BOOKERIZER_VERSION
          ports:
          - containerPort: 11111
          - containerPort: 30000
          - containerPort: 80
      terminationGracePeriodSeconds: 180
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: booking-silo
  namespace: orleans-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: booking-silo
