aks/manifest/jaeger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: orleans-demo
  labels:
    app: jaeger
spec:
  selector:
    matchLabels:
      app: jaeger
  replicas: 1
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.49
          ports:
          - containerPort: 16686
          - containerPort: 4317
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  namespace: orleans-demo
spec:
  ports:
  - name: grpc
    port: 4317
  selector:
    app: jaeger
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-ui
  namespace: orleans-demo
spec:
  type: ClusterIP
  ports:
  - port: 16686
  selector:
    app: jaeger
