aks/manifest/booking-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-web
  namespace: orleans-demo
  labels:
    app: booking-web
spec:
  selector:
    matchLabels:
      app: booking-web
  replicas: 1
  template:
    metadata:
      labels:
        app: booking-web

        # The serviceId label is used to identify the service to Orleans
        orleans/serviceId: booking-web

        # The clusterId label is used to identify an instance of a cluster to Orleans.
        # Typically, this will be the same value as serviceId or any fixed value.
        # In cases where you are not using rolling deployments (for example, blue/green deployments),
        # this value can allow for distinct clusters which do not communicate directly with each others,
        # but which still share the same storage and other resources.
        orleans/clusterId: booking

        # Workload identity
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: orleans-demo-sa
      containers:
        - name: main
          image: mbaksacr.azurecr.io/booking.web:dev
          imagePullPolicy: Always
          ports:
          - containerPort: 11111
          - containerPort: 30000
          - containerPort: 80
      terminationGracePeriodSeconds: 180
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

---
apiVersion: v1
kind: Service
metadata:
  name: booking-web
  namespace: orleans-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: booking-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-web-ingress
  namespace: orleans-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bookerizer.aks.bjorkstrom.dev
    secretName: booking-web-tls-secret
  rules:
  - host: bookerizer.aks.bjorkstrom.dev
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: booking-web
            port:
              number: 80
