aks/manifest/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-admin-ingress
  namespace: orleans-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - admin.bookerizer.aks.bjorkstrom.dev
    secretName: booking-admin-tls-secret
  rules:
  - host: admin.bookerizer.aks.bjorkstrom.dev
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: booking-admin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-silo-ingress
  namespace: orleans-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - silo.bookerizer.aks.bjorkstrom.dev
    secretName: booking-silo-tls-secret
  rules:
  - host: silo.bookerizer.aks.bjorkstrom.dev
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: booking-silo
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-web-ingress
  namespace: orleans-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bookerizer.aks.bjorkstrom.dev
    secretName: booking-web-tls-secret
  rules:
  - host: bookerizer.aks.bjorkstrom.dev
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: booking-web
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracelens-ui-ingress
  namespace: orleans-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - trace.bookerizer.aks.bjorkstrom.dev
    secretName: tracelens-ui-tls-secret
  rules:
  - host: trace.bookerizer.aks.bjorkstrom.dev
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: tracelens-ui
            port:
              number: 5001
